--- a/portfolio-app/react-app/src/App.css
+++ b/portfolio-app/react-app/src/App.css
@@ -74,10 +74,8 @@ a:hover {
   left: 0;
   right: 0;
   z-index: 1000; /* S'assurer qu'il est au-dessus de tout */
-  background-color: rgba(200, 150, 255, 0.3); /* Nuance de violet encore plus claire avec opacité */
-  backdrop-filter: blur(15px); /* Plus de flou */
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3); /* Ombre plus prononcée */
-  padding: 20px 0; /* Plus de padding */
+  background-color: #FFFFFF; /* Fond blanc */
+  z-index: 1000;
 }
 
 .header-nav .container > div {
