--- a/portfolio-app/react-app/src/App.css
+++ b/portfolio-app/react-app/src/App.css
@@ -76,7 +76,7 @@ a:hover {
   background-color: rgba(100, 0, 150, 0.5); /* Violet avec opacité */
   backdrop-filter: blur(15px); /* Plus de flou */
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3); /* Ombre plus prononcée */
-  padding: 10px 0; /* Rétablir le padding vertical */
+  padding: 15px 0; /* Augmenter le padding vertical */
 }
 
 .header-nav .container > div {
